# sky-app

./: .gitignore  CMakeLists.txt  README.md  index.data  index.html  index.js
src/: application.cpp  application.h  main.cpp
src/sol/: config.hpp
